<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_service"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="24dp">

    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/tv_task_perform_every"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/perform_every"
        app:layout_constraintBottom_toBottomOf="@+id/et_task_interval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_task_interval" />

    <EditText
        android:id="@+id/et_task_interval"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/default_interval"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toBottomOf="@+id/et_task_name"
        tools:ignore="Autofill"/>

    <RadioGroup
        android:id="@+id/rg_task_units"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/toggle_widget_outline"
        android:checkedButton="@+id/rb_task_km"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/et_task_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_task_interval"
        app:layout_constraintTop_toTopOf="@+id/et_task_interval">

        <RadioButton
            android:id="@+id/rb_task_km"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/km" />

        <RadioButton
            android:id="@+id/rb_task_hours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/hours" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_task_last_performed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_performed"
        app:layout_constraintBottom_toBottomOf="@+id/btn_task_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_task_calendar" />

    <TextView
        android:id="@+id/tv_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_task_calendar"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/btn_task_calendar"
        tools:text="25.06.2019" />

    <Button
        android:id="@+id/btn_task_calendar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_task_date"
        app:layout_constraintTop_toBottomOf="@+id/et_task_interval" />

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_task"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_task_calendar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_cancel_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save_task"
        app:layout_constraintTop_toBottomOf="@+id/btn_task_calendar"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_task_perform_every,tv_task_last_performed"/>

</androidx.constraintlayout.widget.ConstraintLayout>